--- a/CRASH Space donation receipt generator/CRASH Space donation receipt generator.csproj
+++ b/CRASH Space donation receipt generator/CRASH Space donation receipt generator.csproj
@@ -3,7 +3,15 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp3.1</TargetFramework>
-        <RootNamespace>CRASH_Space_donation_receipt_generator</RootNamespace>
+        <RootNamespace></RootNamespace>
+        <Nullable>enable</Nullable>
+        <IsPackable>false</IsPackable>
+        <Authors>Max Pixel</Authors>
+        <PackageLicenseUrl>https://www.gnu.org/licenses/lgpl-3.0.en.html</PackageLicenseUrl>
+        <RepositoryUrl>https://github.com/CRASHSpace/donation-receipt-generator</RepositoryUrl>
+        <RepositoryType>git</RepositoryType>
+        <Company>CRASH Space</Company>
+        <Product>donation receipt generator</Product>
     </PropertyGroup>
 
 </Project>
